--- a/styles/css/spreadsheet.css
+++ b/styles/css/spreadsheet.css
@@ -18,7 +18,7 @@ table.histRec {
 tfoot tr td {
   font-weight: bold;
   text-align: right;
-  background-color: transparent;
+  background-color: white;
 }
 
 td, th {
