main grid of ad page

--- a/styles/css/event-ad.css
+++ b/styles/css/event-ad.css
@@ -1,6 +1,25 @@
+/* universal */
+.hidden {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .md\:block {
+        display: block;
+    }
+}
+
 /* Flex classes */
 .u-flex {
     display: flex;
+}
+
+.flex-row {
+    flex-direction: row;
+}
+
+.flex-col {
+    flex-direction: column;
 }
 
 .justify-start {
@@ -11,8 +30,123 @@
     justify-content: space-between;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
+.justify-end {
+    justify-content: end;
+}
+
+.items-start {
+    align-items: flex-start;
+}
+
 .items-center {
     align-items: center;
+}
+
+.items-end {
+    align-items: flex-end;
+}
+
+@media (min-width: 640px) {
+    .sm\:items-end {
+        align-items: flex-end;
+    }
+}
+
+/* Grid classes */
+.u-grid {
+    display: grid;
+}
+
+.gap-8 {
+    grid-row-gap: 8px;
+}
+
+.gap-y-2 {
+    grid-row-gap: 8px;
+}
+
+.grid-cols-8 {
+    grid grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.col-span-6 {
+    grid-column: span 6/span 6;
+}
+
+.col-span-5 {
+    grid-column: span 5/span 5;
+}
+
+.col-span-3 {
+    grid-column: span 3/span 3;
+}
+
+@media (min-width: 768px) {
+    .md\:gap-x-16 {
+        column-gap: 64px;
+    }
+}
+
+@media (min-width: 768px) {
+    .md\:col-span-3 {
+        grid-column: span 3/span 3;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:grid-cols-6 {
+        grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:hidden {
+        display: none;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:col-span-3 {
+        grid-column: span 3/span 3;
+    }
+}
+
+/* definitions for Header */
+.navContainer-unisize {
+    height: 72px;
+    width: 100%;
+    padding-bottom: 16px;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.pt-3 {
+    padding-top: 3px;
+}
+
+.pt-24 {
+    padding-top: 24px;
+}
+
+@media (min-width: 640px) {
+    .sm\:pt-0 {
+        padding-top: 0;
+    }
+}
+
+/* definitions for main */
+.contentContainer {
+    background-color: black;
+}
+
+.mb-1 {
+    margin-bottom: 4px;
 }
 
 /* definitions for Footer */
@@ -22,4 +156,60 @@ a[href^="mailto"]::before {
 
 a[href^="tel"]::before {
     content: "📞 ";
+}
+
+/* text settings */
+.text-pink {
+    color: rgba(247, 141, 120, 1.0);
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-2xl {
+    font-size: 36px;
+    line-height: 8px;
+}
+
+.text-sm {
+    font-size: 6px;
+    line-height: 5px;
+}
+
+.text-xs {
+    font-size: 5px;
+    line-height: 4px;
+}
+
+@media (min-width: 1024px) {
+    .lg\:text-lg {
+        font-size: 9px;
+        line-height: 7px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:text-sm {
+        font-size: 6px;
+        line-height: 5px;
+    }
+}
+
+@media (min-width: 768px) {
+    .md\:text-5xl {
+        font-size: 72px;
+        line-height: 1;
+    }
+}
+
+@media (min-width: 400px) {
+    .xs\:text-3xl {
+        font-size: 48px;
+        line-height: 10px;
+    }
 }
