--- a/styles/css/event-ad.css
+++ b/styles/css/event-ad.css
@@ -11,6 +11,10 @@
     overflow: hidden;
 }
 
+h2 {
+    margin: 0;
+}
+
 @media (min-width: 768px) {
     .md\:block {
         display: block;
@@ -230,6 +234,17 @@
     padding-right: 32px;
 }
 
+.px-0 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+@media (min-width: 640px) {
+    .sm\:pb-20 {
+        padding-bottom: 80px;
+    }
+}
+
 @media (min-width: 640px) {
     .sm\:pt-0 {
         padding-top: 0;
@@ -269,17 +284,30 @@
     margin-bottom: 4px;
 }
 
+.mb-8 {
+    margin-bottom: 32px;
+}
+
 .mb-14 {
-    margin-bottom: 14px;
+    margin-bottom: 56px;
 }
 
 .mt-8 {
-    margin-top: 8px;
+    margin-top: 32px;
+}
+
+.mt-20 {
+    margin-top: 80px;
 }
 
 .mx-auto {
     margin-left: auto;
     margin-right: auto;
+}
+
+.mx-0 {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .mx-4 {
@@ -297,6 +325,28 @@
     padding-bottom: 51.25%;
     padding-top: 40px;
     position: relative;
+}
+
+.swiperContainer {
+    /* universal for swipers */
+    list-style: none;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    z-index: 1;
+    /* specially for this use: horizontal, pointer events */
+    touch-action: pan-y;
+}
+
+.swiperItem {
+    flex-shrink: 0;
+    height: 100%;
+    position: relative;
+    transition-property: transform;
+    width: 338px;
+    margin-right: 20px;
 }
 
 .relative {
@@ -318,6 +368,12 @@
     .sm\:my-32 {
         margin-top: 128px;
         margin-bottom: 128px ;
+    }
+}
+
+@media (min-width: 768px) {
+    .md\:mt-0 {
+        margin-top: 0;
     }
 }
 
@@ -351,6 +407,11 @@ a[href^="tel"]::before {
     text-align: right;
 }
 
+.text-3xl {
+    font-size: 30px;
+    line-height: 36px;
+}
+
 .text-2xl {
     font-size: 36px;
     line-height: 50px;
@@ -371,24 +432,17 @@ a[href^="tel"]::before {
     line-height: 16px;
 }
 
-@media (min-width: 1024px) {
-    .lg\:text-lg {
-        font-size: 18px;
-        line-height: 24px;
-    }
-}
-
-@media (min-width: 1024px) {
-    .lg\:text-sm {
-        font-size: 14px;
-        line-height: 20px;
-    }
-}
-
 @media (min-width: 400px) {
     .xs\:text-3xl {
         font-size: 30px;
         line-height: 36px;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:text-5xl {
+        font-size: 48px;
+        line-height: 1;
     }
 }
 
@@ -403,5 +457,19 @@ a[href^="tel"]::before {
     .md\:text-xl {
         font-size: 20px;
         line-height: 28px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:text-lg {
+        font-size: 18px;
+        line-height: 24px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:text-sm {
+        font-size: 14px;
+        line-height: 20px;
     }
 }
