--- a/styles/css/event-ad.css
+++ b/styles/css/event-ad.css
@@ -7,12 +7,49 @@
     display: block;
 }
 
+.absolute {
+    position: absolute;
+}
+
+@media (min-width: 768px) {
+    md\:absolute {
+        position: absolute;
+    }
+}
+
+.align-middle {
+    vertical-align: middle;
+}
+
 .overflow-hidden {
     overflow: hidden;
 }
 
 h2, h3, h4 {
     margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+.top-0 {
+    top: 0;
+}
+
+.inset-x-0 {
+    left: 0;
+    right: 0;
+}
+
+@media (min-width: 768px) {
+    .md\:inset-0 {
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+    }
 }
 
 @media (min-width: 768px) {
@@ -24,6 +61,18 @@ h2, h3, h4 {
 @media (min-width: 640px) {
     .sm\:block {
         display: block;
+    }
+}
+
+@media (min-width: 1280px) {
+    .xl\:max-w-6xl {
+        max-width: 1152px;
+    }
+}
+
+@media (min-width: 1536px) {
+    .\32xl\:max-w-7xl {
+        max-width: 1280px;
     }
 }
 
@@ -128,6 +177,10 @@ h2, h3, h4 {
     grid-row-gap: 32px;
 }
 
+.grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
 }
@@ -159,9 +212,28 @@ h2, h3, h4 {
 .col-span-1 {
     grid-column: span 1/span 1;
 }
+.faqSetBox {
+    grid-column: span 1/span 1; }
+    .faqSetBox h2 {
+        color: rgba(221, 219, 212, 1.0);
+        text-align: left;
+    }
+    .faqSetBox p {
+        color: rgba(221, 219, 212, 0.75);
+        text-align: left;
+        font-size: 16px;
+        line-height: 24px;
+    }
 
 .col-start-4 {
     grid-column-start: 4;
+}
+
+@media (min-width: 1280px) {
+    .lg\:gap-32 {
+        grid-row-gap: 128px;
+        grid-column-gap: 128px;
+    }
 }
 
 @media (min-width: 768px) {
@@ -198,6 +270,12 @@ h2, h3, h4 {
 @media (min-width: 768px) {
     .md\:col-span-3 {
         grid-column: span 3/span 3;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:grid-cols-3 {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 }
 
@@ -523,6 +601,25 @@ h2, h3, h4 {
     }
 }
 
+@media (min-width: 1280px) {
+    .xl\:mx-auto {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (min-width: 1280px) {
+    .xl\:mt-40 {
+        margin-top: 160px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .xl\:mb-40 {
+        margin-bottom: 160px;
+    }
+}
+
 /* definitions for Footer */
 a[href^="mailto"]::before {
     content: "📧 ";
@@ -534,8 +631,10 @@ a[href^="tel"]::before {
 
 /* text settings */
 .text-pink {
-    color: rgba(247, 141, 120, 1.0);
-}
+    color: rgba(247, 141, 120, 1.0); }
+    .text-pink.text-white-hover:hover {
+        color: rgba(221, 219, 212, 1.0);
+    }
 
 .text-blue {
     color: rgba(110, 155, 154, 1.0);
@@ -563,8 +662,8 @@ a[href^="tel"]::before {
 }
 
 .text-2xl {
-    font-size: 36px;
-    line-height: 50px;
+    font-size: 24px;
+    line-height: 32px;
 }
 
 .text-xl {
@@ -586,6 +685,13 @@ a[href^="tel"]::before {
     .xs\:text-3xl {
         font-size: 30px;
         line-height: 36px;
+    }
+}
+
+@media (min-width: 640px) {
+    .sm\:text-xl {
+        font-size: 20px;
+        line-height: 28px;
     }
 }
 
@@ -628,5 +734,19 @@ a[href^="tel"]::before {
     .lg\:text-sm {
         font-size: 14px;
         line-height: 20px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .xl\:text-5xl {
+        font-size: 48px;
+        line-height: 1;
+    }
+}
+
+@media (min-width: 1536px) {
+    .\32xl\:text-2xl {
+        font-size: 24px;
+        line-height: 32px;
     }
 }
